# codesec

./: README.md  contribution.md  main.py  pyproject.toml  reqirements.txt  setup.py
codesec/: __init__.py  explorer.py  main.py  reports.py  scanner.py
docs/: CHANGELOG.md
example/sample/: app.js  config.py
tests/: __init__.py  test_codesec.py
