[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codesec"]

[project]
name = "codesec-cli"
version = "0.1.0"
description = "A combined Codebase Explorer + Privacy/Security Analyzer"
requires-python = ">=3.10"
license = "MIT"
keywords = ["security", "privacy", "code-analysis", "tui"]
authors = [
    { name = "samar mane", email = "lyla07515@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "textual>=0.47.1",
    "rich>=13.0.0",
    "tree-sitter>=0.20.1",
    "typing-extensions>=4.0.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/samar-d-coder/codesec"
Repository = "https://github.com/samar-d-coder/codesec.git"
Issues = "https://github.com/samar-d-coder/codesec/issues"
Changelog = "https://github.com/samar-d-coder/codesec/blob/main/CHANGELOG.md"

[project.scripts]
codesec = "codesec.main:main"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
